[gd_scene load_steps=5 format=3 uid="uid://d263v7k7ged4w"]

[ext_resource type="Script" uid="uid://bk6nwn7o78ib2" path="res://scoring_test.gd" id="1_krsl8"]
[ext_resource type="PackedScene" uid="uid://d14bd2ryyhrdr" path="res://letter_selection.tscn" id="2_7iipe"]
[ext_resource type="PackedScene" uid="uid://b56orn6gpj15h" path="res://album_case.tscn" id="2_krsl8"]
[ext_resource type="PackedScene" uid="uid://drpkjcye8s7dv" path="res://shop.tscn" id="3_h7saj"]

[node name="ScoringTest" type="Node2D"]
script = ExtResource("1_krsl8")

[node name="Panel" type="Panel" parent="."]
offset_left = -213.0
offset_top = -153.0
offset_right = 220.0
offset_bottom = -10.0

[node name="TextEdit" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 46.0
offset_right = 364.0
offset_bottom = 96.0

[node name="LetterSelection" parent="." instance=ExtResource("2_7iipe")]
position = Vector2(266, 218)

[node name="MicPos" parent="LetterSelection" index="0"]
position = Vector2(-676, -19)

[node name="LetterArea" parent="LetterSelection" index="1"]
position = Vector2(-434, -145)

[node name="Shape" parent="LetterSelection/LetterArea" index="0"]
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0.905198, 1, 0.704366, 1, 0, 1)

[node name="Letters" type="Node2D" parent="LetterSelection/LetterArea" index="1"]

[node name="AlbumCase" parent="LetterSelection" instance=ExtResource("2_krsl8")]
position = Vector2(96, -24)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Shop" parent="." instance=ExtResource("3_h7saj")]
position = Vector2(334, -120)

[node name="Button" type="Button" parent="."]
offset_left = 114.0
offset_top = -218.0
offset_right = 164.0
offset_bottom = -187.0
text = "score"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="LetterSelection"]
